fix: Remove html/body overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  padding: 0;
+}
+
 .App {
   background-color: #282c34;
   min-height: 100vh;
@@ -29,7 +35,7 @@
 }
 
 .fade-enter {
-  transition: 0.8s ease-in opacity;
+  transition: 0.5s ease-in opacity;
 }
 
 .fade-enter, .fade-exit-active {
